--- a/style.css
+++ b/style.css
@@ -1,254 +1,30 @@
 @import url(styles/header.css);
+@import url(styles/banner.css);
+@import url(styles/carrosel.css);
+@import url(styles/card.css);
 @import url(styles/topicos.css);
+@import url(styles/contato.css);
+@import url(styles/rodape.css);
 
 
 :root {
+    --fonte: 'Poppins', sans-serif;
     --ciano-principal: #e2eafd;
     --ciano-claro: #eaf2ff;
     --branco-principal: #E5E5E5;
     --gradiente-azul: linear-gradient(to right, #002F52, #326589);
     --azul: #002F52;
     --amarelo: #eb9d00;
+
 }
 
 body {
     font-size: 16px;
     font-weight: 400;
-    font-family: 'Poppins', sans-serif;
+    font-family: var(--fonte);
 }
 
 .container {
     display: flex;
     align-items: center;
-}
-
-
-
-.banner {
-    background-image: var(--gradiente-azul);
-    text-align: center;
-    color: var(--branco-principal);
-    box-sizing: border-box;
-    padding: 2.5em 2em;
-}
-
-.banner__titulo {
-    font-size: 18px;
-    font-weight: 700;
-}
-
-.banner__paragrafo {
-    padding: 1em;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 1.2em;
-}
-
-.banner__input {
-    background: transparent;
-    width: 100%;
-    box-sizing: border-box;
-    border-radius: 24px;
-    border: 1px var(--branco-principal) solid;
-    padding: 0.6em 1em; 
-    color: var(--ciano-claro);
-    
-}
-
-.banner__input::placeholder {
-    text-align: center;
-    font-size: 13px;
-    font-weight: 400;
-    font-family: 'Poppins', sans-serif;
-
-    color: var(--branco-principal);
-    background-image: url(img/Vector.svg);
-    background-repeat: no-repeat;
-    background-position: 2em;
-    
-}
-
-
-.swiper-slide img {
-    width: 100%;
-}
-
-.swiper-button-prev,
-.swiper-button-next {
-    display: none;
-}
-
-.swiper-pagination {
-    position: initial;
-    padding: .5em 0;    
-}
-
-
-.card {
-    background-color: var(--branco-principal);
-    box-shadow: 0 4px 4px;
-    border-radius: 10px;
-    margin: 1rem;
-    padding: 1rem;
-    
-}
-
-.card__descricao {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    gap: 0.6em;
-}
-
-.descricao__titulo-terciario {
-    font-size: 16px;
-    font-weight: 700;
-    line-height: 20px;
-    color: var(--amarelo);
-}
-
-.descricao__titulo-principal {
-    font-weight: 700;
-    font-size: 18px;
-    Line-height: 27px;
-    color: #002F52;
-    margin: 0.5em 0;
-}
-
-.descricao__titulo-secundario {
-    font-weight: 700;
-    font-size: 16px;
-    color: #002F52;
-    margin: 0.6em 0;
-}
-
-.descricao__paragrafo {
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 21px;
-}
-
-.descricao__paragrafo-secundario {
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 18px;
-}
-
-.img__descricao {
-    height: 188px;
-}
-
-.img__descricao-secundario {
-    height: 150px;
-    width: 150px;
-}
-
-
-.card__botoes {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-}
-
-
-.card__link {
-    font-size: 16px;
-    font-weight: 700;
-    color: var(--branco-principal);
-    text-decoration: none;
-    background-color: var(--amarelo);
-    padding: 0.9em 1.9em;
-    margin-top: 0.6em;
-}
-
-.botoes__item {
-    margin: 0 0.5em;
-}
-
-.card__estrelas {
-    display: flex;
-    flex-direction: row;
-    gap: 0.5em;
-    margin-bottom: 0.5rem;
-}
-
-
-.material-symbols-outlined {
-    color: red;
-    vertical-align: bottom;
-  font-variation-settings:
-  'FILL' 1,
-  'wght' 400,
-  'GRAD' 0,
-  'opsz' 48
-}
-
-
-
-
-
-
-
-
-
-
-
-.contato {
-    background-color: var(--branco-principal);
-    padding: 1.5em 1em;
-}
-
-
-.contato__titulo {
-    font-size: 18px;
-    font-weight: 500;
-
-    background-image: var(--gradiente-azul);
-    color: transparent;
-    -webkit-background-clip: text;
-    background-clip: text;
-}
-
-.contato__texto {
-    font-size: 16px;
-    font-weight: 300;
-    padding: 1em 0;
-
-    background-image: var(--gradiente-azul);
-    color: transparent;
-    -webkit-background-clip: text;
-    background-clip: text;
-}
-
-.contato__email {
-    width: 90%;
-    border: 1px var(--azul) solid;
-    border-radius: 24px;
-    padding: 0.9em 1em;
-    margin: 0.5em auto;
-    background-color: transparent;
-    color: var(--azul);
-}
-
-.contato__email::placeholder {
-    text-align: center;
-    font-size: 16px;
-    font-weight: 400;
-    color: var(--azul);
-
-    background-image: url(img/email.svg);
-    background-repeat: no-repeat;
-    background-position: 3em;
-}
-
-
-
-.rodape {
-    border-top: 2px black solid;
-    background-color: var(--branco-principal);
-}
-
-.rodape__titulo {
-    padding: 1em;
 }
