--- a/styles/header.css
+++ b/styles/header.css
@@ -23,7 +23,8 @@
     width: 60vw;
     position: absolute;
     top: 100%;
-    background-color: var(--ciano-principal)
+    background-color: var(--ciano-principal);
+    z-index: 10;
 }
 
 .lista-menu__aberto {
