--- a/styles/banner.css
+++ b/styles/banner.css
@@ -25,8 +25,7 @@
     border-radius: 24px;
     border: 1px var(--branco-principal) solid;
     padding: 0.6em 1em; 
-    color: var(--ciano-claro);
-    
+    color: var(--ciano-claro);  
 }
 
 .banner__input::placeholder {
@@ -40,4 +39,34 @@
     background-repeat: no-repeat;
     background-position: 2em;
     
+}
+
+@media screen and (min-width: 1024px) {
+
+    .banner {
+        padding: 4em 2em;
+    }
+
+    .banner__titulo {
+        font-size: 36px;
+    }
+
+    .banner__input {
+        width: 45%;
+    }
+
+    .banner__input::placeholder {
+        background-position: 12em;
+    }
+}
+
+@media screen and (min-width: 1728px) {
+    .banner__input {
+        width: 30%;
+        padding: 1em;
+    }
+
+    .banner__input::placeholder {
+        background-position: 10em;
+    }
 }
