--- a/styles/card.css
+++ b/styles/card.css
@@ -3,8 +3,7 @@
     box-shadow: 0 4px 4px;
     border-radius: 10px;
     margin: 1rem;
-    padding: 1rem;
-    
+    padding: 1rem; 
 }
 
 .card__descricao {
@@ -88,7 +87,6 @@
     margin-bottom: 0.5rem;
 }
 
-
 .material-symbols-outlined {
     color: red;
     vertical-align: bottom;
@@ -97,4 +95,35 @@
   'wght' 400,
   'GRAD' 0,
   'opsz' 48
+}
+
+
+@media screen and (min-width: 1024px) {
+  
+    .card {
+        width: 40%;
+        margin: 3em auto;
+    }
+
+    .descricao {
+        margin-right: 6em;
+    }
+}
+
+@media screen and (min-width: 1728px) {
+  
+    .card {
+        width: 70%;
+        margin: 0;
+
+    }
+
+    .descricao__titulo-terciario {
+        font-size: 26px;
+        line-height: 1.2em;
+    }
+
+    .descricao {
+        margin-right: 1.5em;
+    }
 }
