--- a/styles/carrosel.css
+++ b/styles/carrosel.css
@@ -4,9 +4,9 @@
     padding-bottom: 0.5em;
 }
 
-
 .carrosel__titulo {
     text-transform: uppercase;
+    text-align: center;
     color: var(--amarelo);
     padding: 1.2em 0 0.5em;
     font-size: 18px;
@@ -17,6 +17,7 @@
 .swiper {
     margin: 0 0.5em;
 }
+
 .swiper-slide img {
     width: 100%;
 }
@@ -29,4 +30,53 @@
 .swiper-pagination {
     position: initial;
     padding: .5em 0;    
+}
+
+@media screen and (min-width: 1024px) {
+
+    .carrosel__titulo {
+        padding: 1.2em 0 0.5em;
+        font-size: 26px;
+    }
+
+    .swiper {
+        width: 60%;
+        margin: 0 auto;
+    }
+
+    .swiper-button-prev,
+    .swiper-button-next {
+        display: block;
+        border-radius: 24px;
+        position: absolute;
+        top: 60%;
+    }
+
+    .swiper-pagination {
+        position: initial;
+        padding: 1em 0 3em;    
+    }
+}
+
+@media screen and (min-width: 1728px) {
+
+    .container__carrosel{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        margin: 3em 20vw;
+    }
+
+    .swiper {
+        width: 80%;
+        margin-right: 5em; 
+    }
+
+    .carrosel__titulo {
+        font-size: 32px;
+    }
+
+    .swiper-pagination {
+        padding: 0 0 1em;
+    }
 }
