--- a/styles/contato.css
+++ b/styles/contato.css
@@ -3,7 +3,6 @@
     padding: 1.5em 1em;
 }
 
-
 .contato__titulo {
     font-size: 18px;
     font-weight: 500;
@@ -45,4 +44,47 @@
     background-image: url(../img/email.svg);
     background-repeat: no-repeat;
     background-position: 3em;
+}
+
+
+@media screen and (min-width: 1024px) {
+    .contato {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        gap: 1em;
+    }
+
+    .contato__titulo {
+        font-size: 24px;
+    }
+
+    .contato__descricao {
+        width: 30%
+    }
+
+    .contato__email {
+        width: 30%;
+        margin: 0;
+    }
+
+    .contato__email::placeholder{
+        background-position: 1.5em;
+    }
+}
+
+@media screen and (min-width: 1728px) {
+
+    .contato {
+        padding: 3em 0;
+    }
+
+    .contato__email {
+        width: 20%;
+    }
+
+    .contato__descricao {
+        width: 20%
+    }
 }
