--- a/styles/topicos.css
+++ b/styles/topicos.css
@@ -31,3 +31,29 @@
     font-size: 14px;
     font-weight: 700;
 }
+
+@media screen and (min-width: 1024px) {
+    .topicos__titulo {
+        font-size: 24px;
+        margin: 1em 0;
+    }
+
+    .topico__link {
+        font-size: 24px;
+    }
+
+    .topicos__item {
+        margin: 3em 1em;
+    }
+}
+
+@media screen and (min-width: 1728px) {
+    .topicos {
+        padding: 2em 25vw;
+    }
+
+    .topicos__titulo {
+        font-size: 32px;
+        margin: 1em 0;
+    }
+}
